genre translations command service v0.0